Fixed text overflow issue when hovering button

--- a/sass/layouts/_content.scss
+++ b/sass/layouts/_content.scss
@@ -155,6 +155,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0 $padding;
+    min-width: 20rem;
 
     &:hover .container-menu-check {
       opacity: 1;
@@ -178,19 +179,11 @@
 
   &-dish {
     text-align: left;
+    min-width: 0;
     & p {
       white-space: nowrap;
-      width: 280px;
       overflow: hidden;
       text-overflow: ellipsis;
-
-      @media (min-width: 481px) {
-        // width: 400px;
-      }
-
-      @media (min-width: 1025px) {
-        width: 230px;
-      }
     }
   }
 
